packages/reference/client/scss/60_components/_c-line-items.scss
.c-line-items {

  &__sections {
    display: flex;
    font-size: 0.9rem;
    border-bottom: 1px solid $border-default;

    @include breakpoint(desktop) {
      margin-top: $global-spacing-unit-tiny;
    }
  }

  &__images {
    order: 1;
    width: 40%;
    margin-right: $global-spacing-unit-tiny;
    margin-top: $global-spacing-unit-small;
    cursor: pointer;

    @include breakpoint (desktop) {
      margin-top: 0;
    }
  }

  &__information {
    order: 2;
    display: flex;
    flex-wrap: wrap;
    width: 60%;
    font-size: 0.8em;
    margin-top: $global-spacing-unit-small;

    @include breakpoint(tablet) {
      font-size: 1em;
    }

    @include breakpoint(desktop) {
      margin-top: 0;
    }
  }

  &__title {
    order: 1;
    width: 80%;

    @include breakpoint(desktop) {
      width: 70%;
    }
  }

  &__remove {
    order: 2;
    flex-grow: 3;
    width: 20%;
  }

  &__colour {
    order: 3;
    width: 20%;

    &-selected {
      order: 4;
      width: 80%;
      padding-left: $global-spacing-unit;

      @include breakpoint(tablet) {
        padding-left: $global-spacing-unit-small;
      }
    }
  }

  &__quantity {
    order: 7;
    width: 20%;

    &-selected {
      order: 8;
      width: 80%;
      padding-left: $global-spacing-unit;

      @include breakpoint(tablet) {
        padding-left: $global-spacing-unit-small;
      }
    }
  }

  &__amount {
    order: 9;
    width: 100%;
    margin-bottom: $global-spacing-unit-small;
    text-align: right;
  }

  &__delete {
    text-align: right;
    margin-top: $global-spacing-unit-tiny;

    @include breakpoint(desktop) {
      font-size: 0.9em;
    }

    &-button {
      color: $form-input-border;
      text-decoration: underline;
      cursor: pointer;
    }
  }

  &__image {
    margin-top: $global-spacing-unit-tiny;
  }

  &__details {

    &-title {
      margin: 0;
      margin-top: $global-spacing-unit-tiny;
    }

    &-sku {
      color: $background-secondary;
    }
  }

  &__param {
    margin: $global-spacing-unit-small 0;
  }

  &__total {

    @include breakpoint(desktop) {
      font-size: 1.1em;
    }
  }
}

